<resources>
    <string name="app_name">Learn English</string>
    <string name="sayilar">SAYILAR</string>
    <string name="renkler">RENKLER</string>
    <string name="hayvanlar">Hayvanlar</string>
    <string name="doga">DOĞA</string>
    <string name="teknoloj">TEKNOLOJİ</string>
    <string name="dunya">ÜLKELER</string>
    <string name="yemekler">YEMEKLER</string>
    <string name="meslek">MESLEKLER</string>
    <string name="kirmizi">KIRMIZI</string>
    <string name="red">RED</string>
    <string name="sari">SARI</string>
    <string name="sarii">YELLOW</string>
    <string name="mavi">MAVİ</string>
    <string name="blue">BLUE</string>
    <string name="yesil">YEŞİL</string>
    <string name="green">GREEN</string>
    <string name="PURPLE1">MOR</string>
    <string name="PURPLE">PURPLE</string>
    <string name="black">SİYAH</string>
    <string name="black1">BLACK</string>
    <string name="kahve">KAHVERENGİ</string>
    <string name="kahve1">BROWN</string>
    <string name="beyaz">BEYAZ</string>
    <string name="beyaz1">WHİTE</string>
    <string name="pink">PEMBE</string>
    <string name="pink1">PİNK</string>
    <string name="orange">TURUNCU</string>
    <string name="orange1">ORANGE</string>
    <string name="gri">GRİ</string>
    <string name="gri1">GREY</string>
    <string name="title_activity_sayilar">sayilar</string>
    <string name="sifir">SIFIR</string>
    <string name="sifir1">ZERO</string>
    <string name="bir">BİR</string>
    <string name="bir1">ONE</string>
    <string name="iki">İKİ</string>
    <string name="iki1">TWO</string>
    <string name="uc">ÜÇ</string>
    <string name="uc1">THREE</string>
    <string name="dort">DÖRT</string>
    <string name="dort1">FOUR</string>
    <string name="five">BEŞ</string>
    <string name="five1">FİVE</string>
    <string name="six">ALTI</string>
    <string name="six1">SİX</string>
    <string name="yedi">YEDİ</string>
    <string name="yedi1">SEVEN</string>
    <string name="sekiz">SEKİZ</string>
    <string name="sekiz1">EİGHT</string>
    <string name="dokuz">DOKUZ</string>
    <string name="dokuz1">NİNE</string>
    <string name="TEN">ON</string>
    <string name="TEN1">TEN</string>
    <string name="doga1">DOĞA</string>
    <string name="doga12">NATURE</string>
    <string name="bitki">BİTKİLER</string>
    <string name="bitki1">PLANTS</string>
    <string name="dag">DAĞ</string>
    <string name="dag1">MOUNTAIN</string>
    <string name="gol">GÖL</string>
    <string name="gol1">LAKE</string>
    <string name="sun">GÜNEŞ</string>
    <string name="sun1">SUN</string>
    <string name="rain">YAĞMUR</string>
    <string name="rain1">RAİN</string>
    <string name="ok">→</string>
    <string name="cimen">ÇİMEN</string>
    <string name="cimen1">GRASS</string>
    <string name="rainbow">GÖKKUŞAĞI</string>
    <string name="rainbow1">RAİNBOW</string>
    <string name="orman">ORMAN</string>
    <string name="orman1">JUNGLE</string>
    <string name="agac">AĞAÇ</string>
    <string name="agac1">TREE</string>
    <string name="kurt">WOLF</string>
    <string name="kurt1">KURT</string>
    <string name="baykus">BAYKUŞ</string>
    <string name="baykus1">OWL</string>
    <string name="cat">KEDİ</string>
    <string name="cat1">CAT</string>
    <string name="dog">KÖPEK</string>
    <string name="dog1">DOG</string>
    <string name="fish">BALIK</string>
    <string name="fish1">FISH</string>
    <string name="fish2">REST IN PEACE FISH NECO</string>
    <string name="aslan">ASLAN</string>
    <string name="aslan1">LION</string>
    <string name="fil">FİL</string>
    <string name="fil1">ELEPHANT</string>
    <string name="yılan">YILAN</string>
    <string name="yılan1">SNAKE</string>
    <string name="tavsan">TAVŞAN</string>
    <string name="tavsan1">RABBIT</string>
    <string name="turkiye">TÜRKİYE</string>
    <string name="turkiye1">TURKEY</string>
    <string name="japan">JAPONYA</string>
    <string name="japan1">JAPAN</string>
    <string name="brasil">BREZİLYA</string>
    <string name="brasil1">BRASİL</string>
    <string name="italy">İTALYA</string>
    <string name="italy1">ITALY</string>
    <string name="england">İNGİLTERE</string>
    <string name="england1">ENGLAND</string>
    <string name="cin">ÇİN</string>
    <string name="cin1">CHİNA</string>
    <string name="FRANCE">FRANSA</string>
    <string name="FRANCE1">FRANCE</string>
    <string name="AZER">AZERBAYCAN</string>
    <string name="AZER1">AZERBAIJAN</string>
    <string name="amerika">AMERİKA</string>
    <string name="amerika1">AMERİCA</string>
    <string name="car">ARABA</string>
    <string name="car1">CAR</string>
    <string name="computer">BİLGİSAYAR</string>
    <string name="computer1">COMPUTER</string>
    <string name="elektrik">ELEKTRİK</string>
    <string name="elektrik1">ELECTRICITY</string>
    <string name="camera">KAMERA</string>
    <string name="camera1">CAMERA</string>
    <string name="motor">MOTOR</string>
    <string name="motor1">ENGINE</string>
    <string name="telefon">TELEFON</string>
    <string name="telefon1">TELEPHONE</string>
    <string name="motorsiklet">MOTORSİKLET</string>
    <string name="motorsiklet1">MOTORCYCLE</string>
    <string name="printer">YAZICI</string>
    <string name="printer1">PRINTER</string>
    <string name="et">BİFTEK</string>
    <string name="et1">STEAK</string>
    <string name="egg">YUMURTA</string>
    <string name="egg1">EGG</string>
    <string name="kebap">KEBAP</string>
    <string name="kebap1">KEBAB</string>
    <string name="makarna">MAKARNA</string>
    <string name="makarna1">PASTA</string>
    <string name="pasta">PASTA</string>
    <string name="pasta1">CAKE</string>
    <string name="fries">KIZARTMA</string>
    <string name="fries1">FRIES</string>
    <string name="rice">PİLAV</string>
    <string name="rice1">RICE</string>
    <string name="suşi">SUŞİ</string>
    <string name="suşi1">SUSHİ</string>
    <string name="actor">AKTÖR</string>
    <string name="actor1">ACTOR</string>
    <string name="asker">ASKER</string>
    <string name="asker1">SOLDIER</string>
    <string name="berber">BERBER</string>
    <string name="berber1">BARBER</string>
    <string name="kaptan">KAPTAN</string>
    <string name="kaptan1">CAPTAIN</string>
    <string name="mekanik">TAMİRCİ</string>
    <string name="mekanik1">MECHANIC</string>
    <string name="polis">POLİS</string>
    <string name="polis1">POLICE</string>
    <string name="yargıc">YARGIÇ</string>
    <string name="yargıc1">JUDGE</string>
    <string name="learn">Learn English</string>


</resources>