<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teknoloji"
    android:id="@+id/tech"
    android:background="#34495e"
    >
    <TextView
        android:id="@+id/textView123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/motorsiklet1"
        android:textColor="@color/sun"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView121"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <TextView
        android:id="@+id/textView118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/delius"
        android:text="@string/telefon1"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView120"
        app:layout_constraintTop_toBottomOf="@+id/textView115" />

    <TextView
        android:id="@+id/textView115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/delius"
        android:text="@string/motor1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView114"
        app:layout_constraintTop_toBottomOf="@+id/textView112" />

    <TextView
        android:id="@+id/textView111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView110"
        app:layout_constraintTop_toBottomOf="@+id/textView108" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/delius"
        android:text="@string/elektrik1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView108"
        app:layout_constraintTop_toBottomOf="@+id/textView106" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/delius"
        android:text="@string/car1"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView102"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar9"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@drawable/triple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9"
        app:srcCompat="@drawable/araba" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/delius"
        android:text="@string/car"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView43"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@android:color/darker_gray"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView101"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="100dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView43"
        app:srcCompat="@drawable/bilgisayar" />

    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/delius"
        android:text="@string/computer"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView55"
        app:layout_constraintTop_toBottomOf="@+id/textView101" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView104"
        app:layout_constraintTop_toBottomOf="@+id/textView102" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/delius"
        android:text="@string/computer1"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView105"
        app:layout_constraintTop_toBottomOf="@+id/textView103" />

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="114dp"
        android:layout_height="79dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView55"
        app:srcCompat="@drawable/elektrik" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/delius"
        android:text="@string/elektrik"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView61"
        app:layout_constraintTop_toBottomOf="@+id/textView104" />

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView107"
        app:layout_constraintTop_toBottomOf="@+id/textView105" />

    <ImageView
        android:id="@+id/imageView62"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView61"
        app:srcCompat="@drawable/kamera" />

    <TextView
        android:id="@+id/textView110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/delius"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView62"
        app:layout_constraintTop_toBottomOf="@+id/textView107" />

    <TextView
        android:id="@+id/textView112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/delius"
        android:text="@string/camera1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView111"
        app:layout_constraintTop_toBottomOf="@+id/textView109" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="100dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView62"
        app:srcCompat="@drawable/motor" />

    <TextView
        android:id="@+id/textView113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/delius"
        android:text="@string/motor"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView63"
        app:layout_constraintTop_toBottomOf="@+id/textView110" />

    <TextView
        android:id="@+id/textView114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView113"
        app:layout_constraintTop_toBottomOf="@+id/textView111" />

    <ImageView
        android:id="@+id/imageView64"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView63"
        app:srcCompat="@drawable/telephone" />

    <TextView
        android:id="@+id/textView119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/delius"
        android:text="@string/telefon"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView64"
        app:layout_constraintTop_toBottomOf="@+id/textView113" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="34dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@android:color/darker_gray"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView119"
        app:layout_constraintTop_toBottomOf="@+id/textView114" />

    <ImageView
        android:id="@+id/imageView65"
        android:layout_width="114dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView64"
        app:srcCompat="@drawable/motorsiklet" />

    <TextView
        android:id="@+id/textView121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/motorsiklet"
        android:textColor="@color/sun"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView65"
        app:layout_constraintTop_toBottomOf="@+id/textView119" />

    <ImageView
        android:id="@+id/imageView66"
        android:layout_width="120dp"
        android:layout_height="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView65"
        app:srcCompat="@drawable/printer" />

    <TextView
        android:id="@+id/textView124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/delius"
        android:text="@string/printer"
        android:textColor="@color/mavii"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView66"
        app:layout_constraintTop_toBottomOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/delius"
        android:text="@string/ok"
        android:textColor="@color/mavii"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textView124"
        app:layout_constraintTop_toBottomOf="@+id/textView120" />

    <TextView
        android:id="@+id/textView126"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/delius"
        android:text="@string/printer1"
        android:textColor="@color/mavii"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView125"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <Button
        android:id="@+id/geri0460"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:text="ss"
        android:textSize="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView177"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:text="@string/learn"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>